--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <body>
 
   
-  <script src="variableAndDatatypes.js"></script>
+  <!-- <script src="variableAndDatatypes.js"></script>
 
   <script src="operators_and_conditionals.js"></script>
 
-  <script src="loops_and_strings.js"></script>
+  <script src="loops_and_strings.js"></script> -->
+
+  <script src="functions.js"></script>
   
+
 </body>
 </html>
