--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <script src="loops_and_strings.js"></script> -->
 
   <script src="functions.js"></script>
+
+  <script src="array.js"></script>
   
 
 </body>
