--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <script src="functions.js"></script>
 
-  <script src="array.js"></script>
+  <!-- <script src="array.js"></script> -->
   
 
 </body>
