--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
   <script src="functions.js"></script>
 
+  <script src=""></script>
+  <script src=""></script>
+  <script src=""></script>
   <!-- <script src="array.js"></script> -->
   
 
