--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <script src="loops_and_strings.js"></script> -->
 
-  <script src="functions.js"></script>
+  <!-- <script src="functions.js"></script> -->
 
-  <script src=""></script>
-  <script src=""></script>
-  <script src=""></script>
+  <script src="inbuilt_objects.js"></script>
+  <script src="callStackAndHoisting.js"></script>
+  <script src="classes.js"></script>
   <!-- <script src="array.js"></script> -->
   
 
