--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
   <!-- <script src="functions.js"></script> -->
 
-  <script src="inbuilt_objects.js"></script>
+  <!-- <script src="inbuilt_objects.js"></script>
   <script src="callStackAndHoisting.js"></script>
-  <script src="classes.js"></script>
+  <script src="classes.js"></script> -->
   <!-- <script src="array.js"></script> -->
+
+  <script src="errorHandling.js"></script>
   
 
 </body>
